feat: аналитика клиента
